# Skia-Arithmetic-Calculator

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  config-windows.cmake.example  cspell.json  docker-compose.yml  justfile  pre-commit.in  pre-push.in
.github/actions/basic-setup/: action.yml
.github/workflows/: CD.yml  CI.yml  ci-cd.yml
docker-dev/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in  mainpage.md
src/business_logic/: BlocksManager.cpp  BlocksManager.h  CMakeLists.txt  constants.h  typenames.h
src/business_logic/calculations/: BlocksCalculator.cpp  BlocksCalculator.h
src/business_logic/calculations/delegate/: IBlocksRegistryDelegate.h
src/business_logic/components/: UIText.cpp  UIText.h  UITextsRow.cpp  UITextsRow.h
src/business_logic/delegate/: IBlockLifecycleManagerDelegate.h  INewBlockChoiceDelegate.h  IWindowDelegate.h
src/business_logic/elements/blocks/: BaseBlock.cpp  BaseBlock.h  BlockType.cpp  BlockType.h  BlocksRegistry.h
src/business_logic/elements/blocks/implementation/: AddBlock.cpp  AddBlock.h  ConstantBlock.cpp  ConstantBlock.h  DivideBlock.cpp  DivideBlock.h  InvertBlock.cpp  InvertBlock.h  MonitorBlock.cpp  MonitorBlock.h  MultiplyBlock.cpp  MultiplyBlock.h  PowerBlock.cpp  PowerBlock.h  SubtractBlock.cpp  SubtractBlock.h
src/business_logic/elements/blocks/structures/: BlocksConnectionSide.h  Port.h
src/business_logic/elements/interactions/: IDoubleClickable.h  IDraggable.h
src/business_logic/errors/: GraphCycleException.h
src/business_logic/geometry/: Point2D.h  Size2D.h  helpers.cpp  helpers.h
src/business_logic/include/: calculator.h
src/business_logic/input/: ConnectPortsInteraction.h  InputChoice.h  InputChoiceInteraction.h
src/business_logic/logging/: Loggable.h
src/business_logic/src/: calculator.cpp  calculator.h
src/business_logic/src/logging/: Loggable.cpp  Loggable.h
src/business_logic/src/utils/: misc.h
src/business_logic/utils/: misc.h
src/gui_app/: CMakeLists.txt  constants.h  main.cpp  main.h
src/gui_app/elements/: SkiaBaseBlockRenderer.cpp  SkiaBaseBlockRenderer.h  SkiaBlocksManagerRenderer.cpp  SkiaBlocksManagerRenderer.h
src/gui_app/renderer/: FontManager.cpp  FontManager.h  SkiaRendererImpl.cpp  SkiaRendererImpl.h
src/gui_app/renderer/delegate/: UIRendererDelegate.h
src/gui_app/src/: constants.cpp  constants.h  main.cpp  main.h
src/gui_app/src/GUI/elements/: BlocksRegistry.h
src/gui_app/src/GUI/elements/base/: BaseBlock.cpp  BaseBlock.h  BlockType.cpp  BlockType.h  IClickable.h  IDoubleClickable.h  IDraggable.h  Port.h
src/gui_app/src/GUI/elements/impl/: AddBlock.cpp  AddBlock.h  ConstantBlock.cpp  ConstantBlock.h  DivideBlock.cpp  DivideBlock.h  InvertBlock.cpp  InvertBlock.h  MonitorBlock.cpp  MonitorBlock.h  MultiplyBlock.cpp  MultiplyBlock.h  PowerBlock.cpp  PowerBlock.h  SubtractBlock.cpp  SubtractBlock.h
src/gui_app/src/GUI/geometry/: Point2D.h  Size2D.h  helpers.cpp  helpers.h
src/gui_app/src/GUI/input/: ConnectPortsInteraction.h  InputChoice.h  InputChoiceInteraction.h
src/gui_app/src/GUI/logic/: BlocksManager.cpp  BlocksManager.h  MessageBox.cpp  MessageBox.h  PortsConnectionSide.h  TextInputDialog.cpp  TextInputDialog.h
src/gui_app/src/GUI/logic/calculations/: BlocksCalculator.cpp  BlocksCalculator.h
src/gui_app/src/GUI/logic/calculations/delegate/: IBlocksRegistryDelegate.h
src/gui_app/src/GUI/logic/delegate/: IBlockLifecycleManagerDelegate.h  INewBlockChoiceDelegate.h
src/gui_app/src/GUI/logic/errors/: GraphCycleException.h
src/gui_app/src/GUI/renderer/: FontManager.cpp  FontManager.h  IRenderer.h  SkiaRendererImpl.cpp  SkiaRendererImpl.h  colors.cpp  colors.h  skia_renderer.cpp  skia_renderer.h
src/gui_app/src/GUI/renderer/components/: UIText.cpp  UIText.h  UITextsRow.cpp  UITextsRow.h
src/gui_app/src/GUI/renderer/delegate/: UIRendererDelegate.h
src/gui_app/src/GUI/window/: GLFWWindowImpl.cpp  GLFWWindowImpl.h  IWindow.h  WindowBase.h  window.cpp  window.h
src/gui_app/src/GUI/window/delegate/: IWindowDelegate.h
src/gui_app/src/GUI/window/prompt/: MessageBox.cpp  MessageBox.h  QAppHolderProto.h  TextInputDialog.cpp  TextInputDialog.h
src/gui_app/src/elements/: SkiaBaseBlockRenderer.cpp  SkiaBaseBlockRenderer.h  SkiaBlocksManagerRenderer.cpp  SkiaBlocksManagerRenderer.h
src/gui_app/src/renderer/: FontManager.cpp  FontManager.h  SkiaRendererImpl.cpp  SkiaRendererImpl.h  colors.h
src/gui_app/src/renderer/delegate/: UIRendererDelegate.h
src/gui_app/src/window/: GLFWWindowImpl.h  SkiaGLFWWindowImpl.cpp  WindowBase.h
src/gui_app/src/window/prompt/: GuiMessageBox.h  MessageBox.cpp  MessageBox.h  QAppHolderProto.cpp  QAppHolderProto.h  TextInputDialog.cpp  TextInputDialog.h
src/gui_app/window/: GLFWQtWindowImpl.h  GLFWWindowImpl.h  SkiaGLFWQtWindowImpl.cpp  SkiaGLFWQtWindowImpl.h  SkiaGLFWWindowImpl.h  WindowBase.h
src/gui_app/window/prompt/: GuiMessageBox.cpp  GuiMessageBox.h  QAppSingletonProto.cpp  QAppSingletonProto.h  TextInputDialog.cpp  TextInputDialog.h
tests/: CMakeLists.txt  ConnectPortsInteractionTest.cpp  HelpersTest.cpp  main.cpp
tests/mocks/: MockBlock.h  MockBlockLifecycleManagerDelegate.h  MockNewBlockChoiceDelegate.h  MockWindowDelegate.h
tests/src/: calculator_test.cpp  main_test.cpp
